--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
             echo "skip=true" >> $GITHUB_OUTPUT
           else
             echo "skip=false" >> $GITHUB_OUTPUT
-
+        shell: bash
   skip_notification:
     needs: check_commit
     if: needs.check_commit.outputs.skip_deploy == 'true'
