--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,11 +20,12 @@ jobs:
       - name: Check commit message for --nodeploy
         id: check_message
         run: |
-          MESSAGE=$(git log -1 --pretty=%B)
+          MESSAGE="$(git log -1 --pretty=%B)"
           if [[ "$MESSAGE" == *"--nodeploy"* ]]; then
-            echo "skip=true" >> $GITHUB_OUTPUT
+            echo "skip=true" >> "$GITHUB_OUTPUT"
           else
-            echo "skip=false" >> $GITHUB_OUTPUT
+            echo "skip=false" >> "$GITHUB_OUTPUT"
+          fi
         shell: bash
   skip_notification:
     needs: check_commit
