--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -75,13 +75,17 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-
+  
+      - name: Install Vercel CLI
+        run: |
+          npm install -g vercel
+  
       - name: Deploy Frontend to Vercel
         id: deploy_frontend
         run: |
           DEPLOY_URL=$(vercel --prod --token ${{ secrets.VERCEL_TOKEN }})
           echo "deploy_url=$DEPLOY_URL" >> $GITHUB_ENV
-
+  
       - name: Send Notification to ntfy.sh & Discord (Frontend)
         run: |
           curl -X POST "${{ secrets.NTFY_URL }}" \
@@ -89,7 +93,7 @@ jobs:
             -H "Tags: rocket" \
             -H "Click: $DEPLOY_URL" \
             -d "Commit: ${{ github.event.head_commit.message }} by ${{ github.event.head_commit.author.name }}"
-
+  
           curl -H "Content-Type: application/json" -X POST ${{ secrets.DISCORD_WEBHOOK }} -d '{
             "username": "Skyvoyage App",
             "embeds": [{
@@ -102,7 +106,7 @@ jobs:
               ]
             }]
           }'
-
+  
   deploy_backend:
     needs: check_commit
     if: needs.check_commit.outputs.backend_deploy == 'true'
@@ -110,13 +114,17 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-
+  
+      - name: Install Vercel CLI
+        run: |
+          npm install -g vercel
+  
       - name: Deploy Backend to Vercel
         id: deploy_backend
         run: |
           DEPLOY_URL=$(vercel --prod --token ${{ secrets.VERCEL_TOKEN }})
           echo "deploy_url=$DEPLOY_URL" >> $GITHUB_ENV
-
+  
       - name: Send Notification to ntfy.sh & Discord (Backend)
         run: |
           curl -X POST "${{ secrets.NTFY_URL }}" \
@@ -124,7 +132,7 @@ jobs:
             -H "Tags: rocket" \
             -H "Click: $DEPLOY_URL" \
             -d "Commit: ${{ github.event.head_commit.message }} by ${{ github.event.head_commit.author.name }}"
-
+  
           curl -H "Content-Type: application/json" -X POST ${{ secrets.DISCORD_WEBHOOK }} -d '{
             "username": "Skyvoyage App",
             "embeds": [{
