--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,8 +82,10 @@ jobs:
   
       - name: Deploy Frontend to Vercel
         id: deploy_frontend
+        working-directory: ./frontend  # Add this if your frontend is in a subdirectory
         run: |
-          DEPLOY_URL=$(vercel --prod --token ${{ secrets.VERCEL_TOKEN }} --yes --project ${{ secrets.FRONTEND_PROJECT_ID }})
+          echo "VERCEL_PROJECT_ID=${{ secrets.FRONTEND_PROJECT_ID }}" > .vercel/project.json
+          DEPLOY_URL=$(vercel --prod --token ${{ secrets.VERCEL_TOKEN }} --yes)
           echo "deploy_url=$DEPLOY_URL" >> $GITHUB_ENV
   
       - name: Send Notification to ntfy.sh & Discord (Frontend)
@@ -91,7 +93,7 @@ jobs:
           curl -X POST "${{ secrets.NTFY_URL }}" \
             -H "Title: ✅ Frontend Deployed" \
             -H "Tags: rocket" \
-            -H "Click: $DEPLOY_URL" \
+            -H "Click: ${{ env.deploy_url }}" \
             -d "Commit: ${{ github.event.head_commit.message }} by ${{ github.event.head_commit.author.name }}"
   
           curl -H "Content-Type: application/json" -X POST ${{ secrets.DISCORD_WEBHOOK }} -d '{
@@ -102,7 +104,7 @@ jobs:
               "fields": [
                 { "name": "Commit By", "value": "${{ github.event.head_commit.author.name }}", "inline": true },
                 { "name": "Date", "value": "${{ github.event.head_commit.timestamp }}", "inline": true },
-                { "name": "Status", "value": "[✅ Success]($DEPLOY_URL)", "inline": true }
+                { "name": "Status", "value": "[✅ Success](${{ env.deploy_url }})", "inline": true }
               ]
             }]
           }'
@@ -121,8 +123,10 @@ jobs:
   
       - name: Deploy Backend to Vercel
         id: deploy_backend
+        working-directory: ./backend  # Add this if your backend is in a subdirectory
         run: |
-          DEPLOY_URL=$(vercel --prod --token ${{ secrets.VERCEL_TOKEN }} --yes --project ${{ secrets.BACKEND_PROJECT_ID }})
+          echo "VERCEL_PROJECT_ID=${{ secrets.BACKEND_PROJECT_ID }}" > .vercel/project.json
+          DEPLOY_URL=$(vercel --prod --token ${{ secrets.VERCEL_TOKEN }} --yes)
           echo "deploy_url=$DEPLOY_URL" >> $GITHUB_ENV
   
       - name: Send Notification to ntfy.sh & Discord (Backend)
@@ -130,7 +134,7 @@ jobs:
           curl -X POST "${{ secrets.NTFY_URL }}" \
             -H "Title: ✅ Backend Deployed" \
             -H "Tags: rocket" \
-            -H "Click: $DEPLOY_URL" \
+            -H "Click: ${{ env.deploy_url }}" \
             -d "Commit: ${{ github.event.head_commit.message }} by ${{ github.event.head_commit.author.name }}"
   
           curl -H "Content-Type: application/json" -X POST ${{ secrets.DISCORD_WEBHOOK }} -d '{
@@ -141,8 +145,7 @@ jobs:
               "fields": [
                 { "name": "Commit By", "value": "${{ github.event.head_commit.author.name }}", "inline": true },
                 { "name": "Date", "value": "${{ github.event.head_commit.timestamp }}", "inline": true },
-                { "name": "Status", "value": "[✅ Success]($DEPLOY_URL)", "inline": true }
+                { "name": "Status", "value": "[✅ Success](${{ env.deploy_url }})", "inline": true }
               ]
             }]
           }'
-
