--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,9 +82,13 @@ jobs:
   
       - name: Deploy Frontend to Vercel
         id: deploy_frontend
-        working-directory: ./frontend  # Add this if your frontend is in a subdirectory
+        working-directory: ./frontend  # Adjust if your frontend is in a different directory
         run: |
-          echo "VERCEL_PROJECT_ID=${{ secrets.FRONTEND_PROJECT_ID }}" > .vercel/project.json
+          # Create .vercel directory if it doesn't exist
+          mkdir -p .vercel
+          # Configure project ID
+          echo '{"projectId":"${{ secrets.FRONTEND_PROJECT_ID }}","orgId":"${{ secrets.VERCEL_ORG_ID }}"}' > .vercel/project.json
+          # Deploy to Vercel
           DEPLOY_URL=$(vercel --prod --token ${{ secrets.VERCEL_TOKEN }} --yes)
           echo "deploy_url=$DEPLOY_URL" >> $GITHUB_ENV
   
@@ -123,9 +127,13 @@ jobs:
   
       - name: Deploy Backend to Vercel
         id: deploy_backend
-        working-directory: ./backend  # Add this if your backend is in a subdirectory
+        working-directory: ./backend  # Adjust if your backend is in a different directory
         run: |
-          echo "VERCEL_PROJECT_ID=${{ secrets.BACKEND_PROJECT_ID }}" > .vercel/project.json
+          # Create .vercel directory if it doesn't exist
+          mkdir -p .vercel
+          # Configure project ID
+          echo '{"projectId":"${{ secrets.BACKEND_PROJECT_ID }}","orgId":"${{ secrets.VERCEL_ORG_ID }}"}' > .vercel/project.json
+          # Deploy to Vercel
           DEPLOY_URL=$(vercel --prod --token ${{ secrets.VERCEL_TOKEN }} --yes)
           echo "deploy_url=$DEPLOY_URL" >> $GITHUB_ENV
   
