--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,17 +79,32 @@ jobs:
       - name: Install Vercel CLI
         run: |
           npm install -g vercel
+      
+      - name: Fix npm dependencies
+        working-directory: ./frontend
+        run: |
+          # Update package.json to force npm to resolve dependency conflicts
+          if [ -f package.json ]; then
+            # Add resolutions or overrides to handle peer dependency conflicts
+            jq '.overrides = {"cmdk": {"react": "^19.0.0"}}' package.json > package.json.tmp
+            mv package.json.tmp package.json
+            
+            # Force install with legacy peer deps
+            # This will be used during the local preparation, not in Vercel's build
+            echo "Setting up .npmrc with legacy peer deps"
+            echo "legacy-peer-deps=true" > .npmrc
+          fi
   
       - name: Deploy Frontend to Vercel
         id: deploy_frontend
-        working-directory: ./frontend  # Adjust if your frontend is in a different directory
+        working-directory: ./frontend
         run: |
           # Create .vercel directory if it doesn't exist
           mkdir -p .vercel
           # Configure project ID
-          echo '{"projectId":"${{ secrets.FRONTEND_PROJECT_ID }}","orgId":"${{ secrets.VERCEL_ORG_ID }}","buildCommand":"npm run build"}' > .vercel/project.json
-          # Create vercel.json to force npm usage
-          echo '{"buildCommand":"npm run build","installCommand":"npm install"}' > vercel.json
+          echo '{"projectId":"${{ secrets.FRONTEND_PROJECT_ID }}","orgId":"${{ secrets.VERCEL_ORG_ID }}"}' > .vercel/project.json
+          # Create vercel.json to force npm usage with legacy peer deps
+          echo '{"buildCommand":"npm run build --legacy-peer-deps","installCommand":"npm install --legacy-peer-deps"}' > vercel.json
           # Deploy to Vercel
           DEPLOY_URL=$(vercel --prod --token ${{ secrets.VERCEL_TOKEN }} --yes)
           echo "deploy_url=$DEPLOY_URL" >> $GITHUB_ENV
@@ -129,7 +144,7 @@ jobs:
   
       - name: Deploy Backend to Vercel
         id: deploy_backend
-        working-directory: ./backend  # Adjust if your backend is in a different directory
+        working-directory: ./backend
         run: |
           # Create .vercel directory if it doesn't exist
           mkdir -p .vercel
