--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.482.0",
     "next": "15.2.2",
+    "next-auth": "^4.24.11",
     "next-seo": "^6.6.0",
     "next-theme": "^0.1.5",
     "next-themes": "^0.4.6",
