--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "input-otp": "^1.4.2",
+    "libphonenumber-js": "^1.12.7",
     "lucide-react": "^0.482.0",
     "next": "15.2.2",
     "next-auth": "^4.24.11",
