🧹chore: update example env and readmore, also a button placement of booking page.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-#SET BACKEND URL HERE
 BACKEND_URL="SET_BACKEND_URL_HERE"
 DATABASE_URL="PUT_YOUR_DATABASE_URL_HERE"
 JWT_SECRET="PUT_SECRET_KEY_HERE"
+NEXTAUTH_SECRET="PUT_NEXTAUTH_SECRET_HERE"
